--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.10.3"
   }
 }
