--- a/config/config.json
+++ b/config/config.json
@@ -1,21 +1,24 @@
 {
   "development": {
-    "username": "root",
-    "password": "tape88white",
-    "database": "impromptu",
-    "host": "localhost",
+    "username": "x0440ptvrtsyhbuh",
+    "password": "liq541q42w61tiam",
+    "database": "pj3v1q9lffqrqri5",
+    "host": "j1r4n2ztuwm0bhh5.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": "tape88white",
-    "database": "impromptu",
-    "host": "localhost",
+    "username": "x0440ptvrtsyhbuh",
+    "password": "liq541q42w61tiam",
+    "database": "pj3v1q9lffqrqri5",
+    "host": "j1r4n2ztuwm0bhh5.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql",
     "logging": false
   },
   "production": {
-    "use_env_variable": "JAWSDB_URL",
+    "username": "x0440ptvrtsyhbuh",
+    "password": "liq541q42w61tiam",
+    "database": "pj3v1q9lffqrqri5",
+    "host": "j1r4n2ztuwm0bhh5.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
